Modificación index.html, se agrego el header// se agrego la carpeta img

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi Primera vez con Git</title>
     <style media="screen">
-        body{
+        body {
             margin: 0;
         }
-        img{
-            max-width: 100;
+        img {
+            max-width: 50%;
             vertical-align: top;
         }
     </style>
 </head>
 <body>
     <img src="img/header.JPG" alt="" />
+    <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="" style="max-width: 50%;"/>
 </body>
 </html>
