--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
             margin: 0;
         }
         img {
-            max-width: 50%;
+            max-width: 100%;
             vertical-align: top;
         }
     </style>
 </head>
 <body>
     <img src="img/header.JPG" alt="" />
-    <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt="" style="max-width: 50%;"/>
+    <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt=""/>
+    <img src="img/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt=""/>
+    <img src="img/" alt=""/>
 </body>
 </html>
