--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <img src="img/header.JPG" alt="" />
     <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt=""/>
     <img src="img/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt=""/>
-    <img src="img/" alt=""/>
+    <img src="img/clasica_0663a6aa-2c83-4435-8530-357480d5a950.PNG" alt=""/>
 </body>
 </html>
