--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <body>
     <img src="img/header.JPG" alt="" />
     <img src="img/hero_51f6ca4a-043f-4384-bf2d-0276833261fc.jpg" alt=""/>
+    <h6>Acustica</h6>
     <img src="img/acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt=""/>
     <img src="img/clasica_0663a6aa-2c83-4435-8530-357480d5a950.PNG" alt=""/>
     <img src="img/footer_0bca93db-411f-4541-825a-4c3b5de36bf1.jpg" alt=""/>
-    
+
 </body>
 </html>
